argocd/owntracks/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: owntracks
  name: owntracks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owntracks
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: owntracks
    spec:
      containers:
        - image: docker.io/owntracks/recorder:1.0.1-43@sha256:050c3ac9ed798d4110f12e53851e94f9fa0fcecb16cf4d7457967eac2e498da7
          imagePullPolicy: IfNotPresent
          name: owntracks
          ports:
            - containerPort: 8083
              protocol: TCP
          volumeMounts:
            - mountPath: /store
              name: data
          readinessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            limits:
              cpu: 50m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 10Mi
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
