argocd/owntracks/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: owntracks-app
  name: owntracks-httproute
  namespace: owntracks
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https
  hostnames:
  - owntracks.yanello.net
  rules:
  - backendRefs:
    - name: owntracks
      namespace: owntracks
      port: 8083
